manifests/default/kayro-nightly/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kayro-nightly
  name: kayro-nightly
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: kayro-nightly
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kayro-nightly
    spec:
      containers:
      - image: registry.senk0.com/kayro-nightly:latest
        imagePullPolicy: Always
        name: kayro-nightly
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "2"
            ephemeral-storage: 4Gi
            memory: 4Gi
          requests:
            cpu: 10m
            memory: 256Mi
      - env:
        - name: DISCORD_TOKEN
          valueFrom:
            secretKeyRef:
              name: kayro-nightly
              key: password
        - name: TARGET_CHANNEL_ID
          value: "1323036066537537546"
        image: registry.senk0.com/kayro:latest
        imagePullPolicy: Always
        name: kayro
        resources:
          limits:
            cpu: "1"
            ephemeral-storage: 1Gi
            memory: 64Mi
          requests:
            cpu: 10m
            memory: 16Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 2
