manifests/default/kayro-nightly/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kayro-nightly
spec:
  selector:
    app: kayro-nightly
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
