manifests/default/kayro-nightly/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kayro-nightly
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`yuri.senk0.com`)
    priority: 10
    services:
    - kind: Service
      name: kayro-nightly
      namespace: default
      passHostHeader: true
      port: 8080
  tls:
    secretName: senk0
